; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/accel/extr_lis3l02dq_core.c_lis3l02dq_spi_read_reg_8.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/iio/accel/extr_lis3l02dq_core.c_lis3l02dq_spi_read_reg_8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.spi_message = type { i32 }
%struct.iio_dev = type { i32 }
%struct.lis3l02dq_state = type { i32, i32*, i32, i64* }
%struct.spi_transfer = type { i32, i32, i32, i32*, i64* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lis3l02dq_spi_read_reg_8(%struct.device* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.spi_message, align 4
  %9 = alloca %struct.iio_dev*, align 8
  %10 = alloca %struct.lis3l02dq_state*, align 8
  %11 = alloca %struct.spi_transfer, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %12 = load %struct.device*, %struct.device** %4, align 8
  %13 = call %struct.iio_dev* @dev_get_drvdata(%struct.device* %12)
  store %struct.iio_dev* %13, %struct.iio_dev** %9, align 8
  %14 = load %struct.iio_dev*, %struct.iio_dev** %9, align 8
  %15 = call %struct.lis3l02dq_state* @iio_dev_get_devdata(%struct.iio_dev* %14)
  store %struct.lis3l02dq_state* %15, %struct.lis3l02dq_state** %10, align 8
  %16 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %11, i32 0, i32 0
  store i32 8, i32* %16, align 8
  %17 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %11, i32 0, i32 1
  store i32 2, i32* %17, align 4
  %18 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %11, i32 0, i32 2
  store i32 1, i32* %18, align 8
  %19 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %11, i32 0, i32 3
  %20 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %10, align 8
  %21 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  store i32* %22, i32** %19, align 8
  %23 = getelementptr inbounds %struct.spi_transfer, %struct.spi_transfer* %11, i32 0, i32 4
  %24 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %10, align 8
  %25 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %24, i32 0, i32 3
  %26 = load i64*, i64** %25, align 8
  store i64* %26, i64** %23, align 8
  %27 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %10, align 8
  %28 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %27, i32 0, i32 0
  %29 = call i32 @mutex_lock(i32* %28)
  %30 = load i32, i32* %5, align 4
  %31 = call i64 @LIS3L02DQ_READ_REG(i32 %30)
  %32 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %10, align 8
  %33 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %32, i32 0, i32 3
  %34 = load i64*, i64** %33, align 8
  %35 = getelementptr inbounds i64, i64* %34, i64 0
  store i64 %31, i64* %35, align 8
  %36 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %10, align 8
  %37 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %36, i32 0, i32 3
  %38 = load i64*, i64** %37, align 8
  %39 = getelementptr inbounds i64, i64* %38, i64 1
  store i64 0, i64* %39, align 8
  %40 = call i32 @spi_message_init(%struct.spi_message* %8)
  %41 = call i32 @spi_message_add_tail(%struct.spi_transfer* %11, %struct.spi_message* %8)
  %42 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %10, align 8
  %43 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @spi_sync(i32 %44, %struct.spi_message* %8)
  store i32 %45, i32* %7, align 4
  %46 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %10, align 8
  %47 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %46, i32 0, i32 1
  %48 = load i32*, i32** %47, align 8
  %49 = getelementptr inbounds i32, i32* %48, i64 1
  %50 = load i32, i32* %49, align 4
  %51 = load i32*, i32** %6, align 8
  store i32 %50, i32* %51, align 4
  %52 = load %struct.lis3l02dq_state*, %struct.lis3l02dq_state** %10, align 8
  %53 = getelementptr inbounds %struct.lis3l02dq_state, %struct.lis3l02dq_state* %52, i32 0, i32 0
  %54 = call i32 @mutex_unlock(i32* %53)
  %55 = load i32, i32* %7, align 4
  ret i32 %55
}

declare dso_local %struct.iio_dev* @dev_get_drvdata(%struct.device*) #1

declare dso_local %struct.lis3l02dq_state* @iio_dev_get_devdata(%struct.iio_dev*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @LIS3L02DQ_READ_REG(i32) #1

declare dso_local i32 @spi_message_init(%struct.spi_message*) #1

declare dso_local i32 @spi_message_add_tail(%struct.spi_transfer*, %struct.spi_message*) #1

declare dso_local i32 @spi_sync(i32, %struct.spi_message*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
